--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx parcel watch src/index.js src/style.css --dist-dir ../server/public"
+    "dev": "npx parcel watch src/index.js src/style.css --dist-dir ../server/public",
+    "start": "npx parcel build src/index.js src/style.css --dist-dir ../server/public"
   },
   "keywords": [],
   "author": "",
