--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch --env-file=.env app.js",
-    "start": "node app.js",
-    "build": "npm install"
+    "build": "npm install",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
